--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "axios": "^0.21.1",
+    "react-router-dom": "^5.2.0",
+    "sass-node": "^4.11.2",
+    "react-toggle": "^4.1.2",
+    "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
